# posh-man

./: .gitignore  Cargo.toml  README.md
.github/workflows/: doc_gen.yaml
project/: Cargo.toml
project/src/: lib.rs
src/: app.rs  main.rs  ui.rs
src/event_handlers/: editing_handlers.rs  input_handlers.rs  main_handlers.rs  mod.rs
src/test_helper/: mod.rs
src/ui/: editing_ui.rs  input_ui.rs  main_ui.rs  mod.rs
