[package]
name = "project_priorities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
project = {path = "../project_priorities/project"}
tabled = {version = "0.20.0", features= ["ansi"]}
