[package]
name = "posh-man"
version = "0.1.0"
edition = "2021"
exclude = ["assets/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.29.0"
csv = "1.3.1"
project = {path = "../posh-man/project"}
ratatui = "0.30.0"
rdev = "0.5.3"
strum = "0.28.0"
strum_macros = "0.28.0"
unicode-width = "0.2.2"
